--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,31 @@
+body {
+  font-family: "Poppins", serif;
+  font-weight: 400;
+}
+
 .weather {
   border: 1px solid grey;
+  color: #878787;
+  padding: 16px;
+  margin: 30px auto;
+  border-radius: 4px;
+  max-width: 600px;
+}
+
+.weather h1 {
+  font-size: 22px;
+  line-height: 26px;
+  margin: 20px 0 0 0;
+}
+
+.weather ul {
+  margin: 0;
+  padding: 0;
+}
+
+.weather li {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+  list-style: none;
 }
