--- a/src/Weather.css
+++ b/src/Weather.css
@@ -29,3 +29,27 @@ body {
   line-height: 19px;
   list-style: none;
 }
+
+.weather img {
+  height: 64px;
+  width: 64px;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.weather .temperature {
+  font-weight: bold;
+  color: #212121;
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 64px;
+}
+
+.weather .unit {
+  color: #212121;
+  font-size: 15px;
+  position: relative;
+  line-height: 1;
+  top: -36px;
+  font-weight: 400;
+}
